// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core / Story host styles With Args 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _ngcontent-a-c145=""
    _nghost-a-c43=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c43=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Core / Story host styles With story template 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _ngcontent-a-c144=""
    _nghost-a-c43=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c43=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
